[tool.poetry]
name = "squamish"
version = "0.4.0"
description = "Feature Classification Tool"
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.22"
lightgbm = "^2.3.0"
pandas = "^0.25.3"
boruta = {git = "https://github.com/lpfann/boruta_py", rev = "fix_lightgbm_rs"}
pytest = "^5.1.2"
seaborn = "^0.9.0"
scipy = "^1.4.1"
arfs-gen = "^1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
lab = "^4.2"
jupyterlab = "^1.2.3"
black = "^19.10b0"
jupyterlab_code_formatter = "^0.7.0"
pylint = "^2.4.4"
jupyter-lsp = "^0.6.0-beta.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

